//
// Copyright 2018, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.test.commandservice.customer;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package="io.spine.test.commandservice.customer.command";
option java_outer_classname = "CustomerCommandsProto";
option java_multiple_files = true;

import "spine/test/commandservice/customer/customer.proto";

// A request to create a new customer record.
message CreateCustomer {
    // The ID of the customer.
    // Even though we have an ID field defined in the `Customer` type, we need a separate ID field in the command
    // so that it can be attributed to an instance of the `Customer` aggregate.
    CustomerId customer_id = 1;

    // Customer data.
    Customer customer = 2;
}

// The command to reset CustomerId generator when a new date is started.
// The ID generator should start a new date with the customer number equal to 1.
message ResetCustomerCounter {
    // This command message does not have field because it's an imperative to the system internals.
    // The scheduling of the command will be set in `CommandContext` of the corresponding command.
}
